# sattools

./: .gitignore  .merlin  .ocamlinit  .travis-ci.sh  .travis.yml  CHANGES.md  Makefile  README.md  _tags  jbuild-ignore  myocamlbuild.ml  opam  sattools-cryptominisat.opam  sattools-minisat.opam  sattools-picosat.opam  sattools.opam
cryptominisat/: Makefile  cryptominisat.ml  cryptominisat.mli  cryptominisat_bindings.ml  cryptominisat_bindings.mli  cryptominisat_intf.cc  cryptominisat_intf.h  cryptominisat_stubgen.ml  jbuild  libocryptominisat.clib  ocryptominisat.mllib  test.ml
minisat/: Makefile  jbuild  libominisat.clib  minisat.ml  minisat.mli  minisat_bindings.ml  minisat_bindings.mli  minisat_intf.cc  minisat_intf.h  minisat_stubgen.ml  ominisat.mllib  test.ml
picosat/: Makefile  jbuild  libopicosat.clib  opicosat.mllib  picosat.ml  picosat.mli  picosat_bindings.ml  picosat_bindings.mli  picosat_stubgen.ml  test.ml
pkg/: META  META.in  pkg.ml
src/: Makefile  dimacs.ml  dimacs.mli  jbuild  lbool.ml  lbool.mli  libs.ml  libs.mli  result.mli  sattools.ml  sattools.mli  sattools.mllib  sattools.mlpack  tseitin.ml  tseitin.mli
test/: Makefile  jbuild  nqueens.ml  puzzle1.txt  puzzle2.txt  puzzle3.txt  puzzle4.txt  sudoku.ml  test.ml
